--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,19 +8,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  event_bus: ^2.0.0
-  mqtt_client: ^9.3.1
-  drag_list: ^1.0.7
-  flutter_slidable: ^0.5.4
-  flutter_screenutil: ^0.5.2
+  event_bus: ^2.0.0 #eventBus
+  mqtt_client: ^9.3.1 #mqtt
+  drag_list: ^1.0.7 #拖拽
+  flutter_slidable: ^0.5.4 #列表侧边菜单
+  flutter_screenutil: ^0.5.2 #size适配
   sliding_up_panel: ^0.3.6
-  liquid_swipe: ^2.1.0
-  shared_preferences: ^2.0.5
-  image_picker: ^0.6.0+20
+  liquid_swipe: ^2.1.0 #滑动组件
+  shared_preferences: ^2.0.5 #key-value存储
+  image_picker: ^0.6.0+20 #图片选择
   curved_navigation_bar: ^0.3.2
-  url_launcher: ^5.2.1
+  url_launcher: ^5.2.1 #连接
   local_auth: ^1.1.4
-  provider: ^6.0.1
+  provider: ^6.0.1 #状态管理
   flutter_speed_dial: ^1.2.4
   simple_animations: 1.3.8
   google_sign_in: 4.0.12 #谷歌全家桶
@@ -29,67 +29,66 @@ dependencies:
   firebase_storage: ^3.0.10
   firebase_database: ^3.0.9
   firebase_core: 0.4.0+9
-  http: ^0.13.1
-  photo_view: ^0.4.2
-  video_player: ^2.1.1
+  http: ^0.13.1 #http
+  photo_view: ^0.4.2 #图片查看
+  video_player: ^2.1.1 #视频播放
   orientation: ^1.1.0
-  dio: ^4.0.0
-  cookie_jar: ^3.0.1
+  dio: ^4.0.0  #接口请求
+  cookie_jar: ^3.0.1 #cookie
   dio_cookie_manager: ^2.0.0
-  intl: ^0.17.0
-  audioplayers: ^0.18.3
-  image_picker_saver: ^0.3.0
-  permission_handler: ^8.3.0
-  flutter_full_pdf_viewer: ^1.0.6
-  flutter_staggered_animations: ^0.1.2
+  intl: ^0.17.0 #本地化和国际化
+  audioplayers: ^0.18.3 #音频播放
+  image_picker_saver: ^0.3.0 #图片选择器
+  permission_handler: ^8.3.0 #key-value缓存
+  flutter_full_pdf_viewer: ^1.0.6  #pdf浏览器
+  flutter_staggered_animations: ^0.1.2 #动画
   qrscan: ^0.2.17 #二维码
   mini_calendar: ^0.3.1 #日历
-  flutter_picker: ^2.0.2
-  flutter_swiper: ^1.1.6
+  flutter_picker: ^2.0.2 #文件选择
+  flutter_swiper: ^1.1.6 #滑动
   inview_notifier_list: 1.0.0 #视频滚动到播放
   sentry: ^5.0.0  #日志监听
   connectivity: ^3.0.3
-  image_gallery_saver: ^1.2.2
-  flutter_plugin_record: ^1.0.1
+  image_gallery_saver: ^1.2.2 #文件保存
+  flutter_plugin_record: ^1.0.1 #录音
   path_provider: ^2.0.1
-  sqflite: ^2.0.0+3
-  bot_toast: 4.0.0
-  flutter_local_notifications: ^5.0.0+1
-  scrollable_positioned_list: ^0.2.0-nullsafety.0
-  wechat_assets_picker: ^6.3.1
-  move_to_background: ^1.0.0
+  sqflite: ^2.0.0+3 #sql数据库
+  bot_toast: 4.0.0 #弹窗
+  flutter_local_notifications: ^5.0.0+1 #本地消息推送
+  scrollable_positioned_list: ^0.2.0-nullsafety.0 #滚动
+  wechat_assets_picker: ^6.3.1 #微信的文件选择器
+  move_to_background: ^1.0.0 #退出app到后台
   lpinyin: ^1.0.9   # 汉字转拼音
-  #  flutter_doraemonkit:
-  #    git:
-  #      url: https://github.com/NayoLx/flutter_doraemonkit_plugin.git
-  get: ^4.1.4
-  call: ^0.3.0
-  flutter_intro: ^2.3.0
+#  flutter_doraemonkit:
+#    git:
+#      url: https://github.com/NayoLx/flutter_doraemonkit_plugin.git
+  get: ^4.1.4 #getx状态管理
+  call: ^0.3.0 #用于windows dll
+  flutter_intro: ^2.3.0 #页面指引
   ios_share:
     git:
       url: https://github.com/NayoLx/ios_share.git
-  ota_update: ^3.0.2
-  package_info: ^2.0.2
-  postgres: ^2.3.2
-  epubx: ^3.0.0-dev.3
-  epub_view: ^2.3.0
-  file_picker: ^3.0.3
-  tabbed_view: ^1.1.0+1
-  multi_split_view: ^1.5.0
-  back_button_interceptor: ^5.0.1
+  ota_update: ^3.0.2 #下载更新
+  package_info: ^2.0.2 #包信息
+  postgres: ^2.3.2 #数据库
+  epubx: ^3.0.0-dev.3 #电子书
+  epub_view: ^2.3.0 #电子书
+  file_picker: ^3.0.3 #文件选择器
+  tabbed_view: ^1.1.0+1 #tab组件
+  multi_split_view: ^1.5.0 #doking
+  back_button_interceptor: ^5.0.1 #键盘管理
   nayuta_sensors: ^1.0.0
-  k_chart: ^0.4.0
-  cached_network_image: ^3.1.0
-  flutter_splash_screen: ^0.3.0
-  encrypt: ^5.0.1
-  syncfusion_flutter_charts: ^19.3.48
-  flutter_shortcuts: ^1.2.2
-  keyboard_actions: ^3.4.4
-  agora_rtc_engine: ^4.0.7
-  flutter_neumorphic: ^3.2.0
-  flutter_image_compress: ^1.1.0
-  video_compress_ds: ^3.1.6
-  sudoku_solver_generator: ^2.1.0+1
+  k_chart: ^0.4.0 #折线图
+  cached_network_image: ^3.1.0 #图片缓存
+  encrypt: ^5.0.1 #加密解锁
+  syncfusion_flutter_charts: ^19.3.48 #折线图
+  flutter_shortcuts: ^1.2.2 #app图标长按按钮
+  keyboard_actions: ^3.4.4 #键盘
+  agora_rtc_engine: ^4.0.7 #声网api
+  flutter_neumorphic: ^3.2.0 #动画组件
+  flutter_image_compress: ^1.1.0 #图片压缩
+  video_compress_ds: ^3.1.6 #视频压缩
+  sudoku_solver_generator: ^2.1.0+1 #数独api
 
 #  dropdown_search:
 
