--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,19 +15,19 @@ dependencies:
   flutter_screenutil: ^0.5.2 #size适配
   liquid_swipe: ^2.1.0 #滑动组件
   shared_preferences: ^2.0.5 #key-value存储
-  image_picker: ^0.6.0+20 #图片选择
+  image_picker: ^0.8.5+3 #图片选择
   curved_navigation_bar: ^0.3.2
   url_launcher: ^6.1.3 #连接
   local_auth: ^1.1.4
   provider: ^6.0.1 #状态管理
   flutter_speed_dial: ^1.2.4
   simple_animations: 1.3.8
-  google_sign_in: 4.0.12 #谷歌全家桶
-  firebase_analytics: ^5.0.2
-  firebase_auth: ^0.15.0
-  firebase_storage: ^3.0.10
-  firebase_database: ^3.0.9
-  firebase_core: 0.4.0+9
+#  google_sign_in: 4.0.12 #谷歌全家桶
+#  firebase_analytics: ^5.0.2
+#  firebase_auth: ^0.15.0
+#  firebase_storage: ^3.0.10
+#  firebase_database: ^3.0.9
+#  firebase_core: 0.4.0+9
   http: ^0.13.1 #http
   photo_view: ^0.4.2 #图片查看
   video_player: ^2.3.0 #视频播放
