--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -87,5 +87,7 @@
 	<true/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 </dict>
 </plist>
