--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,14 @@ dependencies:
   drag_list: ^1.0.7 #拖拽
   flutter_slidable: ^0.5.4 #列表侧边菜单
   flutter_screenutil: ^0.5.2 #size适配
-  liquid_swipe: ^2.1.0 #滑动组件
+  liquid_swipe: ^3.0.0 #滑动组件
   shared_preferences: ^2.0.5 #key-value存储
   image_picker: ^0.8.5+3 #图片选择
   curved_navigation_bar: ^0.3.2
   url_launcher: ^6.1.3 #连接
   local_auth: ^1.1.4
   provider: ^6.0.1 #状态管理
-  flutter_speed_dial: ^1.2.4
+  flutter_speed_dial: ^6.0.0
   simple_animations: 1.3.8
 #  google_sign_in: 4.0.12 #谷歌全家桶
 #  firebase_analytics: ^5.0.2
@@ -52,7 +52,7 @@ dependencies:
 #  flutter_plugin_record: ^1.0.1 #录音
   path_provider: ^2.0.1
   sqflite: ^2.0.0+3 #sql数据库
-  bot_toast: 4.0.0 #弹窗
+  bot_toast: ^4.0.3 #弹窗
   flutter_local_notifications: ^9.5.0 #本地消息推送
   scrollable_positioned_list: ^0.2.0-nullsafety.0 #滚动
   wechat_assets_picker: ^7.0.5 #微信的文件选择器
@@ -75,14 +75,14 @@ dependencies:
   file_picker: ^4.5.1 #文件选择器
   tabbed_view: ^1.1.0+1 #tab组件
   multi_split_view: ^1.5.0 #doking
-  back_button_interceptor: ^5.0.1 #键盘管理
+  back_button_interceptor: ^6.0.1 #键盘管理
   sensors_plus: ^1.3.0 #陀螺仪
   k_chart: ^0.4.0 #折线图
   cached_network_image: ^3.1.0 #图片缓存
   encrypt: ^5.0.1 #加密解锁
-  syncfusion_flutter_charts: ^19.3.48 #折线图
+  syncfusion_flutter_charts: ^20.2.43 #折线图
   flutter_shortcuts: ^1.2.2 #app图标长按按钮
-  keyboard_actions: ^3.4.4 #键盘
+  keyboard_actions: ^4.0.1 #键盘
 #  agora_rtc_engine: ^4.0.7 #声网api
   flutter_neumorphic: ^3.2.0 #动画组件
   flutter_image_compress: ^1.1.0 #图片压缩
@@ -102,7 +102,8 @@ dependencies:
   build_runner: ^2.1.10 #json格式化配套
   flame: ^1.2.0 #游戏引擎
   webview_flutter: ^3.0.4 #webview
-  flutter_riverpod: ^1.0.3 #river
+  flutter_riverpod: ^1.0.4 #river
+  udp: ^5.0.3 #udp广播
 
 #  plugin_test:
 #    path: /Users/lixuan/Documents/work/plugin_test
