--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   drag_list: ^1.0.7 #拖拽
   flutter_slidable: ^0.5.4 #列表侧边菜单
   flutter_screenutil: ^0.5.2 #size适配
@@ -16,12 +18,12 @@ dependencies:
   curved_navigation_bar: ^0.3.2
   local_auth: ^2.1.2
   flutter_speed_dial: ^6.0.0
-#  google_sign_in: 4.0.12 #谷歌全家桶
-#  firebase_analytics: ^5.0.2
-#  firebase_auth: ^0.15.0
-#  firebase_storage: ^3.0.10
-#  firebase_database: ^3.0.9
-#  firebase_core: 0.4.0+9
+  #  google_sign_in: 4.0.12 #谷歌全家桶
+  #  firebase_analytics: ^5.0.2
+  #  firebase_auth: ^0.15.0
+  #  firebase_storage: ^3.0.10
+  #  firebase_database: ^3.0.9
+  #  firebase_core: 0.4.0+9
   http: ^0.13.1 #http
   orientation: ^1.1.0
   audioplayers: ^1.0.0 #音频播放
@@ -33,16 +35,16 @@ dependencies:
   flutter_swiper: ^1.1.6 #滑动
   inview_notifier_list: 3.0.0 #视频滚动到播放
   connectivity: ^3.0.3
-#  flutter_plugin_record: ^1.0.1 #录音
+  #  flutter_plugin_record: ^1.0.1 #录音
   sqflite: ^2.0.0+3 #sql数据库
   flutter_local_notifications: ^9.5.0 #本地消息推送
   scrollable_positioned_list: ^0.2.0-nullsafety.0 #滚动
   wechat_assets_picker: ^7.0.5 #微信的文件选择器
   move_to_background: ^1.0.0 #退出app到后台
   lpinyin: ^2.0.3   # 汉字转拼音
-#  flutter_doraemonkit:
-#    git:
-#      url: https://github.com/NayoLx/flutter_doraemonkit_plugin.git
+  #  flutter_doraemonkit:
+  #    git:
+  #      url: https://github.com/NayoLx/flutter_doraemonkit_plugin.git
   call: ^0.3.0 #用于windows dll
   flutter_intro: ^2.3.0 #页面指引
   ota_update: ^3.0.2 #下载更新
@@ -52,7 +54,7 @@ dependencies:
   k_chart: ^0.4.0 #折线图
   cached_network_image: ^3.1.0 #图片缓存
   syncfusion_flutter_charts: ^20.2.43 #折线图
-#  agora_rtc_engine: ^4.0.7 #声网api
+  #  agora_rtc_engine: ^4.0.7 #声网api
   flutter_neumorphic: ^3.2.0 #动画组件
   image_compression: ^1.0.3
   video_compress_ds: ^3.1.6 #视频压缩
@@ -63,7 +65,7 @@ dependencies:
   win_toast: ^0.0.2 #桌面端的toast弹窗
   tray_manager: ^0.1.4 #系统托盘
   window_manager: ^0.2.0 #有关窗口设置的包
-#  dynamic_widget: ^4.0.4
+  #  dynamic_widget: ^4.0.4
   shell: ^2.0.0 #调用命令行
   redis: ^3.1.0 #redis
   json_serializable: ^6.2.0 #json格式化
@@ -75,11 +77,11 @@ dependencies:
   image_picker_saver: ^0.3.0
   file_picker: ^4.6.1 #文件选择器
   flutter_markdown: ^0.6.6
-  self_utils:
-    git: https://github.com/Yosuke-li/self_utils.git
-#  本地
 #  self_utils:
-#    path: /Users/lixuan/Documents/work/self_utils
+#    git: https://github.com/Yosuke-li/self_utils.git
+#  本地
+  self_utils:
+    path: /Users/lixuan/Documents/work/self_utils
 
 dev_dependencies:
   flutter_test:
