--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,7 +87,7 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
-    sdk: flutterf
+    sdk: flutter
 flutter:
   uses-material-design: true
   assets:
