--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,8 @@ dependencies:
   flutter_markdown: ^0.6.6 #markdown
   animated_text_kit: ^4.2.2
   flutter_svg: ^1.0.3
+  flutter_quill: ^6.0.8+1
+  flutter_quill_extensions: ^0.1.0
 #  self_utils:
 #    git: https://github.com/Yosuke-li/self_utils.git
 #  本地
