--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  intl_utils: ^2.8.2 #国际化
   drag_list: ^1.0.7 #拖拽
   flutter_slidable: ^0.5.4 #列表侧边菜单
   flutter_screenutil: ^0.5.2 #size适配
@@ -79,14 +80,15 @@ dependencies:
   flutter_markdown: ^0.6.6 #markdown
   animated_text_kit: ^4.2.2
   flutter_svg: ^1.0.3
-  flutter_quill: ^6.0.8+1
-  flutter_quill_extensions: ^0.1.0
+#  flutter_quill: ^6.0.9 #富文本
+#  flutter_quill_extensions: ^0.1.0
 #  self_utils:
 #    git: https://github.com/Yosuke-li/self_utils.git
 #  本地
   self_utils:
     path: /Users/lixuan/Documents/work/self_utils
 #  openai_client: ^0.0.2
+  flutter_chatgpt_api: ^1.1.0
 
 dev_dependencies:
   flutter_test:
