--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,9 @@ dependencies:
   flutter_picker: ^2.0.2 #文件选择
   flutter_swiper: ^1.1.6 #滑动
   inview_notifier_list: 3.0.0 #视频滚动到播放
-  connectivity: ^3.0.3
+  connectivity_plus: ^3.0.4
   #  flutter_plugin_record: ^1.0.1 #录音
-  sqflite: ^2.0.0+3 #sql数据库
+  sqflite: ^2.2.6 #sql数据库
   flutter_local_notifications: ^9.5.0 #本地消息推送
   scrollable_positioned_list: ^0.2.0-nullsafety.0 #滚动
   wechat_assets_picker: ^7.0.5 #微信的文件选择器
@@ -89,6 +89,9 @@ dependencies:
     path: /Users/lixuan/Documents/work/self_utils
 #  openai_client: ^0.0.2
   table_calendar: ^3.0.8
+  desktop_webview_window: ^0.2.0
+  webview_cef:
+    path: /Users/lixuan/Documents/work/webview_cef
 
 dev_dependencies:
   flutter_test:
