--- a/packages/epub_view/pubspec.yaml
+++ b/packages/epub_view/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
     path: ../epubx
   equatable: ^2.0.3
   html: ^0.15.0
-  flutter_html: ^3.0.0-alpha.3
+  flutter_html: ^3.0.0-beta.1
   scrollable_positioned_list: ^0.3.2
   collection: ^1.16.0
   universal_file: ^1.0.0
